# SemesterProjectCpp

./: .clang-format  .gitignore  CMakeLists.txt  NDVector.cpp  NDVector.h  README.md  file_writer.h  interpolate.h  least-squares.h  main.cpp
Data/: play-core-0.txt  play-core-1.txt  play-core-2.txt  play-core-3.txt
